--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <small>
+                                <small class="text-muted">
                                     Asset Store for every single department of the ministry, add, edit, update assets in this section
                                 </small>
                             </div>
@@ -68,14 +68,14 @@
         </a>
     </div>
     <div class="col-md-3">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction">
+        <a asp-area="Users" asp-controller="Transfers" asp-action="Index" class="text-secondary">
             <div class="card divShadow">
                 <div class="card-status bg-secondary br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
                     <div class="row">
                         <div class="col">
                             <h3 class="mb-2 fw-semibold">Transfers</h3>
-                            <p class="text-muted fs-13 mb-0">Asset Transfers</p>
+                            <p class="text-muted fs-13 mb-0 text-secondary">Asset Transfers</p>
                         </div>
                         <div class="col col-auto top-icn dash">
                             <div class="counter-icon bg-secondary dash ms-auto box-shadow-primary">
@@ -85,7 +85,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <small>
+                                <small class="text-muted">
                                     Transfer of Assets between different stores at every section and every level.
                                 </small>
                             </div>
@@ -96,7 +96,7 @@
         </a>
     </div>
     <div class="col-md-3">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction">
+        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction" class="text-info">
             <div class="card divShadow">
                 <div class="card-status bg-info br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
@@ -114,7 +114,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <small>
+                                <small class="text-muted">
                                     Disposal of Assets that includes selling, recycling, donating, or scrapping the asset.
                                 </small>
                             </div>
@@ -125,7 +125,7 @@
         </a>
     </div>
     <div class="col-md-3">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction">
+        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction" class="text-warning">
             <div class="card divShadow">
                 <div class="card-status bg-warning br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
@@ -141,7 +141,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <small>
+                                <small class="text-muted">
                                     Dynamic reporting tool provides generating of multiple types of reports
                                 </small>
                             </div>
