Transfers Section initiated

--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
                         <div class="row">
                             <div class="col">
                                 <small class="text-muted">
-                                    Transfer of Assets between different stores at every section and every level.
+                                    Transfer of Assets among different stores at every section and every level.
                                 </small>
                             </div>
                         </div>
