--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -9,3 +9,158 @@
         </ol>
     </div>
 </div>
+<div class="row">
+    <div class="col-12 col-sm-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <div class="card divShadow">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-7">
+                                                        <h6>Assets Transferred</h6>
+                                                        <span>Count: </span><span class="text-bold"> 14</span><br />
+                                                        <span>Value: </span><span class="text-bold"> $128,330</span>
+                                                    </div>
+                                                    <div class="col-5">
+                                                        <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-secondary-gradient text-white ms-auto">
+                                                            <i class="fe fe-arrow-up"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="card divShadow">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-7">
+                                                        <h6>Assets Received</h6>
+                                                        <span>Count: </span><span class="text-bold"> 11</span><br />
+                                                        <span>Value: </span><span class="text-bold"> $102,320.00</span>
+                                                    </div>
+                                                    <div class="col-5">
+                                                        <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-primary-gradient text-white ms-auto">
+                                                            <i class="fe fe-arrow-down"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="card divShadow">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-8">
+                                                        <h6>Awaiting Acknowledgement</h6>
+                                                        <span> Count: </span><span class="text-bold"> 2</span><br />
+                                                        <span> Value: </span><span class="text-bold"> $22,908.00</span>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-info-gradient text-white ms-auto">
+                                                            <i class="fe fe-check"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="card divShadow">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-8">
+                                                        <h6>Requires Attention</h6>
+                                                        <span> Count: </span><span class="text-bold"> 4</span><br />
+                                                        <span> Value: </span><span class="text-bold"> $92,225.00</span>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <div class="hpx-50 wpx-50 br-5 d-flex align-items-center justify-content-center bg-info-gradient text-white ms-auto">
+                                                            <i class="fe fe-check"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-8 col-sm-8">
+                                        <div class="table-responsive">
+                                            <table id="tblTransfers" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
+                                                <thead class="bg-primary-gradient ms-auto divShadow">
+                                                    <tr>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-10">Date</th>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-20">Transfer To</th>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-20">Store Owner</th>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-5">Number of Assets</th>
+                                                        <th class="text-white bg-transparent border-bottom-0 w-20 no-btn">Action</th>
+                                                    </tr>
+                                                </thead>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-sm-4">
+                                        chart goes here...
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="col-sm-12">
+                                    <a asp-action="CreateTranfer" asp-controller="Transfers" id="btnCreate" class="btn btn-outline-primary pt-1"><i class="fe fe-plus-circle"></i>&nbsp;New Transfer</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="row">
+                    @*<hr class="customHR" />*@
+                    <div class="col-sm-12">
+                        <a asp-action="Index" asp-controller="Home" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section scripts {
+
+    <!-- PROJECT-LIST JS-->
+    @*<script src="~/assets/js/project-list.js"></script>*@
+    <script>
+        $(document).ready(function () {
+            //$("#hideMenu").click();
+
+            $('#tblTransfers').DataTable({
+                "createdRow": function (row, data, dataIndex) {
+                    if (dataIndex % 2 == 1) {
+                        $(row).addClass('bg-light-transparent');
+                    }
+                },
+            });
+
+            $('.even').addClass("bg-light-transparent");
+            $('.odd').removeClass("bg-light-transparent");
+
+            //$('.select2').select2();
+            
+
+        });
+    </script>
+
+
+}
